--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "now-build": "npm run build",
     "build": "webpack",
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server --history-api-fallback",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@reach/router": "^1.3.3",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.0.0",
     "intersection-observer": "^0.10.0",
