Renombro proyectos Vercel a petgram-jdb y petgram-jdb-api Elimino endpoint para obtener todos los usuarios

--- a/now.json
+++ b/now.json
@@ -1,7 +1,6 @@
 {
   "version": 2,
-  "name": "petgram-jonatandb",
-  "alias": "petgram-jonatandb",
+  "alias": "petgram-jdb",
   "builds": [
     {
       "use": "@now/static-build",
