--- a/api/now.json
+++ b/api/now.json
@@ -1,7 +1,6 @@
 {
   "version": 2,
-  "name": "petgram-api-jonatandb",
-  "alias": ["petgram-api-jonatandb"],
+  "alias": ["petgram-jdb-api"],
   "builds": [{ "src": "index.js", "use": "@now/node" }],
   "routes": [
     {
