--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "now-build": "npm run build",
     "build": "webpack",
     "dev": "webpack-dev-server --history-api-fallback",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve:dev": "webpack --mode=development --progress && npx serve dist -s"
   },
   "keywords": [],
   "author": "",
