--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apollo-boost": "^0.4.9",
     "graphql": "^15.0.0",
     "intersection-observer": "^0.10.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
