--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "now-build": "npm run build",
     "build": "webpack",
     "dev": "webpack-dev-server --history-api-fallback",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve:dev": "webpack --mode=development --progress && npx serve dist -s"
+    "serve:dev": "webpack --mode=development --progress && npx serve dist -s",
+    "deploy": "vercel --prod",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "jonatandb@gmail.com",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.10.2",
@@ -21,7 +22,8 @@
     "html-webpack-plugin": "^4.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-pwa-manifest": "^4.2.0"
   },
   "dependencies": {
     "@reach/router": "^1.3.3",
