--- a/api/package.json
+++ b/api/package.json
@@ -1,19 +1,21 @@
 {
   "name": "reactavanzadoplatzi-graphql-server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "deploy": "now -t <tu-token>",
     "start:api": "NODE_ENV=production node index.js",
-    "dev:api": "nodemon index.js --ignore db.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:api": "nodemon index.js --ignore db.json"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "2.5.0",
-    "bcrypt": "3.0.6",
+    "apollo-server-express": "2.25.0",
+    "bcrypt": "5.0.0",
     "cors": "2.8.5",
     "express": "4.17.0",
     "express-jwt": "5.3.1",
@@ -26,3 +28,4 @@
     "nodemon": "1.19.0"
   }
 }
+
