--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "alias": ["petgram-jdb-api"],
-  "builds": [{ "src": "index.js", "use": "@now/node" }],
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [
     {
       "headers": {
@@ -14,3 +14,4 @@
     }
   ]
 }
+
